# axon-core

./: .gitignore  LICENSE
.github/: CODEOWNERS
axon/: .gitignore  README.md  mix.exs
axon/assets/css/: app.css
axon/assets/js/: app.js
axon/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
axon/lib/: axon.ex  axon_web.ex
axon/lib/axon/: application.ex
axon/lib/axon/app/: config_provider.ex  config_store.ex  execute_macro.ex  keycodes.ex  load_config.ex  static_config_provider.ex
axon/lib/axon_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
axon/lib/axon_web/components/: core_components.ex  layouts.ex
axon/lib/axon_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex  setup_controller.ex  setup_html.ex
axon/lib/axon_web/live/: dashboard_live.ex  macro_live.ex  setup_live.ex  test_remote_address_live.ex
axon/lib/axon_web/live_hooks/: remote_address.ex
axon/lib/axon_web/plugs/: remote_address_plug.ex  setup_plug.ex
axon/lib/mix/tasks/: axon.keycodes.check.ex  (+1 more)
axon/native/axon_engine/: Cargo.toml
axon/native/axon_engine/src/: lib.rs
axon/native/axon_engine/src/core/: actions.rs  keys.rs  mod.rs
axon/native/axon_engine/src/nif/: input.rs  setup.rs
axon/native/axon_engine/src/windows/: input.rs  mdns.rs  mod.rs  shell.rs  wlan.rs
axon/native/axon_nif/: Cargo.toml
axon/priv/: keycodes.json  profiles.yaml.sample
axon/test/support/: conn_case.ex
docs/: android_architecture.md  architecture.md  error_codes.md  implementation_plan.md  refactoring_report_config_management.md  test_plan.md
(+44 files in other folders)
