[package]
name = "axon_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "axon_engine"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
] }
