[package]
name = "axon_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "axon_engine"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
mdns-sd = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_NetworkManagement_WiFi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Registry",
] }
